Fix artifact paths in CI workflow to include 'app/' prefix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: jar-files
-          path: build/libs/*.jar
+          path: app/build/libs/*.jar
 
   test:
     runs-on: ubuntu-latest
@@ -78,4 +78,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: build/test-results/test/
+          path: app/build/test-results/test/
